<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="0.5dp"
    android:layout_marginBottom="15dp"
    android:id="@+id/element_lang"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@drawable/table_border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dato"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dato"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tid"
            android:layout_width="73dp"
            android:layout_height="match_parent"
            android:background="@drawable/table_border"
            android:text="@string/tid"
            android:textSize="17sp" />

        <ImageButton
            android:id="@+id/icon"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:background="@drawable/table_border"
            android:backgroundTint="@color/cardBack"
            android:contentDescription="@string/ikon"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/table_border"
            android:padding="1dp"
            android:text="@string/temp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/nedbor"
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:background="@drawable/table_border"
            android:padding="1dp"
            android:text="@string/nedbor"
            android:textSize="14sp" />


    </LinearLayout>



</androidx.cardview.widget.CardView>