<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="2dp"
    android:layout_marginBottom="15dp"
    app:cardCornerRadius="8dp"
    android:id="@+id/element"
    app:cardElevation="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/icon"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/ikon"
            android:scaleType="centerCrop"
            android:backgroundTint="@color/cardBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/dato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dato"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="110dp"
                tools:layout_editor_absoluteY="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical|start"
                android:padding="5dp">

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp"
                    android:padding="1dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/nedbor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nedbor"
                    android:padding="1dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/vind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vind"
                    android:padding="1dp"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>



</androidx.cardview.widget.CardView>