<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forh"
    android:background="@drawable/bg_selector"
    >


    <ImageView
        android:id="@+id/sol2"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/sol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sol" />

    <ImageView
        android:id="@+id/weather_icon_svg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/ikon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/korttid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/korttid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/langtid"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/quantum_white_100"/>

    <Button
        android:id="@+id/langtid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/langtid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/korttid"
        android:background="@color/quantum_white_100"/>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/nowcast_graph"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toTopOf="@+id/langtid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lokasjon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/koordinater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>